samples/_failures_safe/1761525775_f2dd73_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e331961.c: In function ‘main’:
./samples/SAFE/__tmp_5e331961.c:129:31: error: ‘INT’ undeclared (first use in this function)
  129 |                     if (sum < INT
      |                               ^~~
./samples/SAFE/__tmp_5e331961.c:129:31: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_5e331961.c:129:34: error: expected ‘)’ at end of input
  129 |                     if (sum < INT
      |                        ~         ^
      |                                  )
./samples/SAFE/__tmp_5e331961.c:129:21: error: expected declaration or statement at end of input
  129 |                     if (sum < INT
      |                     ^~
./samples/SAFE/__tmp_5e331961.c:129:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e331961.c:129:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e331961.c:129:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e331961.c:129:21: error: expected declaration or statement at end of input
